fix: switch language visibility using hidden attribute for reliable rendering

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -330,8 +330,8 @@ pre {
   display: none;
 }
 
-[data-lang="zh"] {
-  display: none;
+[data-lang][hidden] {
+  display: none !important;
 }
 
 a:focus-visible,
